fix: scroll bar UI
- Hidden scrollbar and cross browsing

--- a/src/styles/components/reservationCard/index.css
+++ b/src/styles/components/reservationCard/index.css
@@ -5,14 +5,6 @@
   height: 80%;
   overflow-y: scroll;
   overflow-x: hidden;
-
-  -ms-overflow-style: none;
-  scrollbar-width: none;
-}
-
-.cards-wrapper::-webkit-scrollbar {
-  display: none;
-  width: 0 !important;
 }
 
 .container {
