--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,6 +28,17 @@ main > h1 {
   font-size: clamp(2.2rem, 4vw, 3.2rem);
 }
 
+.cards-wrapper,
+main {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.cards-wrapper::-webkit-scrollbar,
+main::-webkit-scrollbar {
+  display: none;
+}
+
 @media only screen and (max-width: 720px) {
   body {
     width: 100vw;
@@ -41,11 +52,5 @@ main > h1 {
     height: fit-content;
     min-height: fit-content;
     padding-bottom: 24px;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-  }
-  main::-webkit-scrollbar {
-    display: none;
-    width: 0 !important;
   }
 }
